--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+          <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -342,9 +343,13 @@
                     newWidth = newHeight * aspectRatio;
                 }
 
+                // Apply minimum scale for large images on mobile
+                const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+                const minScale = isMobile ? 0.5 : 0.3; // Less aggressive zoom-out on mobile
+                const scale = Math.max(minScale, Math.min(newWidth / originalCanvasWidth, newHeight / originalCanvasHeight));
+
                 canvas.setWidth(originalCanvasWidth);
                 canvas.setHeight(originalCanvasHeight);
-                const scale = Math.min(newWidth / originalCanvasWidth, newHeight / originalCanvasHeight);
                 canvas.setZoom(scale);
                 canvas.setDimensions({ width: originalCanvasWidth * scale, height: originalCanvasHeight * scale }, { cssOnly: true });
                 canvas.renderAll();
@@ -561,7 +566,7 @@
                     selectable: true,
                     hasControls: true,
                     evented: true,
-                    shadow: '2px 2px 4px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(0, 247, 255, 0.2)' // Simplified shadow
+                    shadow: '2px 2px 4px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(0, 247, 255, 0.2)'
                 });
                 canvas.add(textObj);
                 saveState();
