--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-          <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -332,8 +331,9 @@
         function resizeCanvas() {
             try {
                 const container = document.getElementById('canvas-container');
-                const maxWidth = Math.min(container.offsetWidth, 1200);
-                const maxHeight = window.innerHeight * 0.6; // Limit height on mobile
+                const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+                const maxWidth = isMobile ? Math.min(container.offsetWidth, 600) : Math.min(container.offsetWidth, 1200);
+                const maxHeight = isMobile ? window.innerHeight * 0.5 : window.innerHeight * 0.6;
                 const aspectRatio = originalCanvasWidth / originalCanvasHeight;
                 let newWidth = maxWidth;
                 let newHeight = newWidth / aspectRatio;
@@ -344,8 +344,7 @@
                 }
 
                 // Apply minimum scale for large images on mobile
-                const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-                const minScale = isMobile ? 0.5 : 0.3; // Less aggressive zoom-out on mobile
+                const minScale = isMobile ? 0.5 : 0.3;
                 const scale = Math.max(minScale, Math.min(newWidth / originalCanvasWidth, newHeight / originalCanvasHeight));
 
                 canvas.setWidth(originalCanvasWidth);
@@ -441,8 +440,9 @@
                 reader.onload = function(event) {
                     const img = new Image();
                     img.onload = function() {
-                        // Cap image dimensions to prevent memory issues
-                        const maxDimension = 1200;
+                        // Cap image dimensions based on device
+                        const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+                        const maxDimension = isMobile ? 600 : 1200;
                         let width = img.width;
                         let height = img.height;
                         if (width > maxDimension || height > maxDimension) {
