--- a/index.html
+++ b/index.html
@@ -18,12 +18,30 @@
             position: relative;
             width: 100%;
             max-width: 1200px;
+            max-height: 60vh;
             border: 2px solid #00f7ff;
             box-shadow: 0 0 20px rgba(0, 247, 255, 0.5);
             border-radius: 10px;
             overflow: hidden;
         }
-        #imageCanvas { width: 100%; height: 100%; touch-action: none; }
+        #imageCanvas {
+            width: 100%;
+            height: 100%;
+            touch-action: none;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+        @media screen and (max-width: 768px) {
+            #canvas-container {
+                max-width: 90vw;
+                max-height: 50vh;
+            }
+            #imageCanvas {
+                max-width: 90vw;
+                max-height: 50vh;
+            }
+        }
         .hue-btn {
             padding: 8px 16px;
             border-radius: 6px;
@@ -332,7 +350,7 @@
             try {
                 const container = document.getElementById('canvas-container');
                 const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-                const maxWidth = isMobile ? Math.min(container.offsetWidth, 600) : Math.min(container.offsetWidth, 1200);
+                const maxWidth = isMobile ? Math.min(container.offsetWidth, window.innerWidth * 0.9) : Math.min(container.offsetWidth, 1200);
                 const maxHeight = isMobile ? window.innerHeight * 0.5 : window.innerHeight * 0.6;
                 const aspectRatio = originalCanvasWidth / originalCanvasHeight;
                 let newWidth = maxWidth;
@@ -343,10 +361,8 @@
                     newWidth = newHeight * aspectRatio;
                 }
 
-                // Apply minimum scale for large images on mobile
-                const minScale = isMobile ? 0.5 : 0.3;
-                const scale = Math.max(minScale, Math.min(newWidth / originalCanvasWidth, newHeight / originalCanvasHeight));
-
+                // Ensure entire image is visible without excessive zoom
+                const scale = Math.min(newWidth / originalCanvasWidth, newHeight / originalCanvasHeight);
                 canvas.setWidth(originalCanvasWidth);
                 canvas.setHeight(originalCanvasHeight);
                 canvas.setZoom(scale);
