--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         }
         .custom-control {
             width: 8px !important;
-            height: -clear: both;
+            height: 8px !important;
             background: #00f7ff !important;
             border: 1px solid #1e1e2f !important;
             border-radius: 50% !important;
@@ -163,12 +163,12 @@
         }
         @media screen and (max-width: 768px) {
             .custom-control {
-                width: 12px !important;
-                height: 12px !important;
+                width: 14px !important;
+                height: 14px !important;
             }
             .custom-rotate {
-                width: 16px !important;
-                height: 16px !important;
+                width: 18px !important;
+                height: 18px !important;
             }
         }
     </style>
@@ -302,18 +302,18 @@
     <script>
         // Customize Fabric.js controls
         fabric.Object.prototype.set({
-            cornerSize: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 12 : 8,
+            cornerSize: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 14 : 8,
             cornerStyle: 'circle',
             cornerColor: '#00f7ff',
             cornerStrokeColor: '#1e1e2f',
             cornerBackgroundColor: '#00f7ff',
-            rotatingPointOffset: 20,
+            rotatingPointOffset: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 30 : 20,
             controls: {
                 ...fabric.Object.prototype.controls,
                 mtr: new fabric.Control({
                     x: 0,
                     y: -0.5,
-                    offsetY: -20,
+                    offsetY: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? -30 : -20,
                     cursorStyle: 'pointer',
                     actionHandler: fabric.controlsUtils.rotationWithSnapping,
                     actionName: 'rotate',
@@ -321,7 +321,7 @@
                         ctx.save();
                         ctx.translate(left, top);
                         ctx.beginPath();
-                        ctx.arc(0, 0, /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 8 : 6, 0, 2 * Math.PI);
+                        ctx.arc(0, 0, /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 10 : 6, 0, 2 * Math.PI);
                         ctx.fillStyle = '#ff007a';
                         ctx.strokeStyle = '#1e1e2f';
                         ctx.lineWidth = 1;
@@ -329,7 +329,7 @@
                         ctx.stroke();
                         ctx.restore();
                     },
-                    cornerSize: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 16 : 12
+                    cornerSize: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 18 : 12
                 })
             }
         });
@@ -338,7 +338,8 @@
             backgroundColor: '#1e1e2f',
             preserveObjectStacking: true,
             enableRetinaScaling: true,
-            allowTouchScrolling: true
+            allowTouchScrolling: false, // Disable to prioritize handle interactions
+            enablePointerEvents: true // Enable pointer events for touch support
         });
         let history = [];
         let redoStack = [];
@@ -379,6 +380,20 @@
                 canvas.setWidth(originalCanvasWidth);
                 canvas.setHeight(originalCanvasHeight);
                 canvas.setZoom(scale);
+
+                // Adjust object coordinates for zoom
+                canvas.getObjects().forEach(obj => {
+                    if (obj.selectable) {
+                        obj.set({
+                            scaleX: obj.scaleX / scale,
+                            scaleY: obj.scaleY / scale,
+                            left: obj.left / scale,
+                            top: obj.top / scale
+                        });
+                        obj.setCoords();
+                    }
+                });
+
                 canvas.setDimensions({ width: originalCanvasWidth * scale, height: originalCanvasHeight * scale }, { cssOnly: true });
                 canvas.renderAll();
             } catch (error) {
@@ -525,11 +540,12 @@
                         alert('Failed to load bandana overlay.');
                         return;
                     }
+                    const currentZoom = canvas.getZoom();
                     img.set({
-                        left: canvas.width / 4,
-                        top: canvas.height / 4,
-                        scaleX: 0.5,
-                        scaleY: 0.5,
+                        left: canvas.width / 4 / currentZoom,
+                        top: canvas.height / 4 / currentZoom,
+                        scaleX: 0.5 / currentZoom,
+                        scaleY: 0.5 / currentZoom,
                         selectable: true,
                         hasControls: true,
                         evented: true
@@ -572,16 +588,19 @@
                         alert('Failed to load logo overlay.');
                         return;
                     }
+                    const currentZoom = canvas.getZoom();
                     img.set({
-                        left: canvas.width / 4,
-                        top: canvas.height / 4,
-                        scaleX: 0.5,
-                        scaleY: 0.5,
+                        left: canvas.width / 4 / currentZoom,
+                        top: canvas.height / 4 / currentZoom,
+                        scaleX: 0.5 / currentZoom,
+                        scaleY: 0.5 / currentZoom,
                         selectable: true,
                         hasControls: true,
-                        evented: true
+                        evented: true,
+                        lockScalingFlip: true // Prevent flipping during scaling
                     });
                     canvas.add(img);
+                    canvas.setActiveObject(img);
                     saveState();
                     canvas.renderAll();
                 });
@@ -595,10 +614,11 @@
             const font = document.getElementById('fontSelect').value;
             const style = document.getElementById('styleSelect').value;
             if (text) {
+                const currentZoom = canvas.getZoom();
                 const textObj = new fabric.Text(text, {
-                    left: canvas.width / 4,
-                    top: canvas.height / 4,
-                    fontSize: 20,
+                    left: canvas.width / 4 / currentZoom,
+                    top: canvas.height / 4 / currentZoom,
+                    fontSize: 20 / currentZoom,
                     fill: color,
                     fontFamily: font,
                     fontWeight: 'bold',
@@ -609,6 +629,7 @@
                     shadow: '2px 2px 4px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(0, 247, 255, 0.2)'
                 });
                 canvas.add(textObj);
+                canvas.setActiveObject(textObj);
                 saveState();
                 canvas.renderAll();
             }
