--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         }
         .custom-control {
             width: 8px !important;
-            height: -clear: both;
+            height: 8px !important;
             background: #00f7ff !important;
             border: 1px solid #1e1e2f !important;
             border-radius: 50% !important;
@@ -160,16 +160,6 @@
             border: 1px solid #1e1e2f !important;
             border-radius: 50% !important;
             box-shadow: 0 0 5px rgba(255, 0, 122, 0.7) !important;
-        }
-        @media screen and (max-width: 768px) {
-            .custom-control {
-                width: 12px !important;
-                height: 12px !important;
-            }
-            .custom-rotate {
-                width: 16px !important;
-                height: 16px !important;
-            }
         }
     </style>
 </head>
@@ -300,39 +290,44 @@
     </div>
 
     <script>
-        // Customize Fabric.js controls
-        fabric.Object.prototype.set({
-            cornerSize: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 12 : 8,
-            cornerStyle: 'circle',
-            cornerColor: '#00f7ff',
-            cornerStrokeColor: '#1e1e2f',
-            cornerBackgroundColor: '#00f7ff',
-            rotatingPointOffset: 20,
-            controls: {
-                ...fabric.Object.prototype.controls,
-                mtr: new fabric.Control({
-                    x: 0,
-                    y: -0.5,
-                    offsetY: -20,
-                    cursorStyle: 'pointer',
-                    actionHandler: fabric.controlsUtils.rotationWithSnapping,
-                    actionName: 'rotate',
-                    render: function(ctx, left, top, styleOverride, fabricObject) {
-                        ctx.save();
-                        ctx.translate(left, top);
-                        ctx.beginPath();
-                        ctx.arc(0, 0, /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 8 : 6, 0, 2 * Math.PI);
-                        ctx.fillStyle = '#ff007a';
-                        ctx.strokeStyle = '#1e1e2f';
-                        ctx.lineWidth = 1;
-                        ctx.fill();
-                        ctx.stroke();
-                        ctx.restore();
-                    },
-                    cornerSize: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 16 : 12
-                })
-            }
-        });
+        // Detect mobile browsers
+        const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+
+        // Customize Fabric.js controls (desktop only)
+        if (!isMobile) {
+            fabric.Object.prototype.set({
+                cornerSize: 8,
+                cornerStyle: 'circle',
+                cornerColor: '#00f7ff',
+                cornerStrokeColor: '#1e1e2f',
+                cornerBackgroundColor: '#00f7ff',
+                rotatingPointOffset: 20,
+                controls: {
+                    ...fabric.Object.prototype.controls,
+                    mtr: new fabric.Control({
+                        x: 0,
+                        y: -0.5,
+                        offsetY: -20,
+                        cursorStyle: 'pointer',
+                        actionHandler: fabric.controlsUtils.rotationWithSnapping,
+                        actionName: 'rotate',
+                        render: function(ctx, left, top, styleOverride, fabricObject) {
+                            ctx.save();
+                            ctx.translate(left, top);
+                            ctx.beginPath();
+                            ctx.arc(0, 0, 6, 0, 2 * Math.PI);
+                            ctx.fillStyle = '#ff007a';
+                            ctx.strokeStyle = '#1e1e2f';
+                            ctx.lineWidth = 1;
+                            ctx.fill();
+                            ctx.stroke();
+                            ctx.restore();
+                        },
+                        cornerSize: 12
+                    })
+                }
+            });
+        }
 
         const canvas = new fabric.Canvas('imageCanvas', {
             backgroundColor: '#1e1e2f',
@@ -345,6 +340,96 @@
         let currentBandana = null;
         let originalCanvasWidth = 1200;
         let originalCanvasHeight = 800;
+
+        // Pinch and zoom gesture handling (mobile only)
+        if (isMobile) {
+            let lastTouch = null;
+            let initialDistance = null;
+            let initialAngle = null;
+            let initialScale = null;
+            let initialPosition = null;
+
+            canvas.on('touchstart', (event) => {
+                const touches = event.e.touches;
+                const activeObject = canvas.getActiveObject();
+                if (!activeObject || !activeObject.selectable) return;
+
+                console.log('Touch start:', touches, 'Target:', activeObject);
+
+                if (touches.length === 1) {
+                    // Single-finger drag
+                    lastTouch = {
+                        x: touches[0].clientX,
+                        y: touches[0].clientY
+                    };
+                    initialPosition = { left: activeObject.left, top: activeObject.top };
+                } else if (touches.length === 2) {
+                    // Two-finger pinch/rotate
+                    const x1 = touches[0].clientX, y1 = touches[0].clientY;
+                    const x2 = touches[1].clientX, y2 = touches[1].clientY;
+                    initialDistance = Math.sqrt((x2 - x1) ** 2 + (y2 - y1) ** 2);
+                    initialAngle = Math.atan2(y2 - y1, x2 - x1);
+                    initialScale = activeObject.scaleX;
+                }
+            });
+
+            canvas.on('touchmove', (event) => {
+                const touches = event.e.touches;
+                const activeObject = canvas.getActiveObject();
+                if (!activeObject || !activeObject.selectable) return;
+
+                console.log('Touch move:', touches, 'Target:', activeObject);
+
+                if (touches.length === 1 && lastTouch) {
+                    // Single-finger drag
+                    const zoom = canvas.getZoom();
+                    const deltaX = (touches[0].clientX - lastTouch.x) / zoom;
+                    const deltaY = (touches[0].clientY - lastTouch.y) / zoom;
+                    activeObject.set({
+                        left: initialPosition.left + deltaX,
+                        top: initialPosition.top + deltaY
+                    });
+                    activeObject.setCoords();
+                    canvas.renderAll();
+                } else if (touches.length === 2) {
+                    // Two-finger pinch/rotate
+                    const x1 = touches[0].clientX, y1 = touches[0].clientY;
+                    const x2 = touches[1].clientX, y2 = touches[1].clientY;
+                    const currentDistance = Math.sqrt((x2 - x1) ** 2 + (y2 - y1) ** 2);
+                    const currentAngle = Math.atan2(y2 - y1, x2 - x1);
+                    const scaleFactor = initialDistance ? currentDistance / initialDistance : 1;
+                    const rotationDelta = initialAngle ? (currentAngle - initialAngle) * (180 / Math.PI) : 0;
+
+                    activeObject.set({
+                        scaleX: initialScale * scaleFactor,
+                        scaleY: initialScale * scaleFactor,
+                        angle: activeObject.angle + rotationDelta
+                    });
+                    activeObject.setCoords();
+                    canvas.renderAll();
+
+                    console.log('Pinch/rotate:', { scaleFactor, rotationDelta });
+                }
+            });
+
+            canvas.on('touchend', () => {
+                const activeObject = canvas.getActiveObject();
+                if (activeObject) {
+                    saveState();
+                }
+                lastTouch = null;
+                initialDistance = null;
+                initialAngle = null;
+                initialScale = null;
+                initialPosition = null;
+                console.log('Touch end');
+            });
+        }
+
+        // Debug scaling events (for desktop handles)
+        canvas.on('object:scaling', (event) => {
+            console.log('Object scaling:', event.transform, 'Object:', event.target);
+        });
 
         // Debounce function to limit render calls
         function debounce(func, wait) {
@@ -461,17 +546,6 @@
             updateHueButtons();
         });
 
-        // Debug touch events
-        canvas.on('touchstart', (event) => {
-            console.log('Touch start:', event.e.touches);
-        });
-        canvas.on('touchmove', (event) => {
-            console.log('Touch move:', event.e.touches);
-        });
-        canvas.on('object:scaling', (event) => {
-            console.log('Object scaling:', event.transform);
-        });
-
         // Image Upload
         document.getElementById('imageUpload').addEventListener('change', function(e) {
             const file = e.target.files[0];
@@ -480,7 +554,6 @@
                 reader.onload = function(event) {
                     const img = new Image();
                     img.onload = function() {
-                        // Cap image dimensions based on device
                         const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
                         const maxDimension = isMobile ? 600 : 1200;
                         let width = img.width;
@@ -531,8 +604,9 @@
                         scaleX: 0.5,
                         scaleY: 0.5,
                         selectable: true,
-                        hasControls: true,
-                        evented: true
+                        hasControls: !isMobile,
+                        evented: true,
+                        lockScalingFlip: true
                     });
                     img.filters = [new fabric.Image.filters.HueRotation()];
                     canvas.add(img);
@@ -578,10 +652,12 @@
                         scaleX: 0.5,
                         scaleY: 0.5,
                         selectable: true,
-                        hasControls: true,
-                        evented: true
+                        hasControls: !isMobile,
+                        evented: true,
+                        lockScalingFlip: true
                     });
                     canvas.add(img);
+                    canvas.setActiveObject(img);
                     saveState();
                     canvas.renderAll();
                 });
@@ -604,11 +680,12 @@
                     fontWeight: 'bold',
                     fontStyle: style.includes('italic') ? 'italic' : 'normal',
                     selectable: true,
-                    hasControls: true,
+                    hasControls: !isMobile,
                     evented: true,
                     shadow: '2px 2px 4px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(0, 247, 255, 0.2)'
                 });
                 canvas.add(textObj);
+                canvas.setActiveObject(textObj);
                 saveState();
                 canvas.renderAll();
             }
@@ -670,7 +747,7 @@
                 const isLocked = !activeObject.selectable;
                 activeObject.set({
                     selectable: isLocked,
-                    hasControls: isLocked,
+                    hasControls: isLocked && !isMobile,
                     evented: isLocked
                 });
                 if (!isLocked && activeObject === currentBandana) {
@@ -692,7 +769,7 @@
                 if (obj !== canvas.getObjects()[0]) { // Skip base image
                     obj.set({
                         selectable: true,
-                        hasControls: true,
+                        hasControls: !isMobile,
                         evented: true
                     });
                 }
@@ -724,6 +801,11 @@
             if (history.length > 1) {
                 redoStack.push(history.pop());
                 canvas.loadFromJSON(history[history.length - 1], () => {
+                    canvas.getObjects().forEach(obj => {
+                        if (obj !== canvas.getObjects()[0]) {
+                            obj.set({ hasControls: !isMobile });
+                        }
+                    });
                     canvas.renderAll();
                     document.getElementById('undoBtn').disabled = history.length <= 1;
                     document.getElementById('redoBtn').disabled = false;
@@ -742,6 +824,11 @@
                 const state = redoStack.pop();
                 history.push(state);
                 canvas.loadFromJSON(state, () => {
+                    canvas.getObjects().forEach(obj => {
+                        if (obj !== canvas.getObjects()[0]) {
+                            obj.set({ hasControls: !isMobile });
+                        }
+                    });
                     canvas.renderAll();
                     document.getElementById('redoBtn').disabled = redoStack.length === 0;
                     document.getElementById('undoBtn').disabled = false;
@@ -757,37 +844,32 @@
         // Download with Watermark
         document.getElementById('downloadBtn').addEventListener('click', function() {
             try {
-                // Temporarily reset zoom for download
                 const currentZoom = canvas.getZoom();
                 canvas.setZoom(1);
                 canvas.setDimensions({ width: originalCanvasWidth, height: originalCanvasHeight }, { cssOnly: true });
 
-                // Create watermark
                 const watermark = new fabric.Text('bandana_Sol', {
                     fontSize: 16,
-                    fill: 'rgba(0, 247, 255, 0.7)', // Neon cyan, semi-transparent
+                    fill: 'rgba(0, 247, 255, 0.7)',
                     fontFamily: 'Orbitron',
                     selectable: false,
                     evented: false
                 });
 
-                // Position watermark in bottom-right corner
                 canvas.add(watermark);
                 const textBounds = watermark.getBoundingRect();
                 watermark.set({
-                    left: originalCanvasWidth - textBounds.width - 10, // 10px margin from right
-                    top: originalCanvasHeight - textBounds.height - 10 // 10px margin from bottom
+                    left: originalCanvasWidth - textBounds.width - 10,
+                    top: originalCanvasHeight - textBounds.height - 10
                 });
                 canvas.renderAll();
 
-                // Generate and download image
                 const dataURL = canvas.toDataURL({ format: 'png', quality: 1 });
                 const link = document.createElement('a');
                 link.href = dataURL;
                 link.download = 'custom_bandana.png';
                 link.click();
 
-                // Remove watermark and restore zoom
                 canvas.remove(watermark);
                 canvas.setZoom(currentZoom);
                 canvas.setDimensions({ 
