--- a/index.html
+++ b/index.html
@@ -303,7 +303,6 @@
         // Detect mobile browsers
         const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
 
- responsive-canvas
         // Customize Fabric.js controls
         fabric.Object.prototype.set({
             cornerSize: isMobile ? 12 : 8,
@@ -337,43 +336,6 @@
                 })
             }
         });
-
-        // Customize Fabric.js controls (desktop only)
-        if (!isMobile) {
-            fabric.Object.prototype.set({
-                cornerSize: 8,
-                cornerStyle: 'circle',
-                cornerColor: '#00f7ff',
-                cornerStrokeColor: '#1e1e2f',
-                cornerBackgroundColor: '#00f7ff',
-                rotatingPointOffset: 20,
-                controls: {
-                    ...fabric.Object.prototype.controls,
-                    mtr: new fabric.Control({
-                        x: 0,
-                        y: -0.5,
-                        offsetY: -20,
-                        cursorStyle: 'pointer',
-                        actionHandler: fabric.controlsUtils.rotationWithSnapping,
-                        actionName: 'rotate',
-                        render: function(ctx, left, top, styleOverride, fabricObject) {
-                            ctx.save();
-                            ctx.translate(left, top);
-                            ctx.beginPath();
-                            ctx.arc(0, 0, 6, 0, 2 * Math.PI);
-                            ctx.fillStyle = '#ff007a';
-                            ctx.strokeStyle = '#1e1e2f';
-                            ctx.lineWidth = 1;
-                            ctx.fill();
-                            ctx.stroke();
-                            ctx.restore();
-                        },
-                        cornerSize: 12
-                    })
-                }
-            });
-        }
- main
 
         const canvas = new fabric.Canvas('imageCanvas', {
             backgroundColor: '#1e1e2f',
@@ -577,11 +539,7 @@
                         scaleX: 0.5,
                         scaleY: 0.5,
                         selectable: true,
- responsive-canvas
                         hasControls: true,
-
-                        hasControls: !isMobile,
- main
                         evented: true,
                         lockScalingFlip: true
                     });
@@ -629,10 +587,7 @@
                         scaleX: 0.5,
                         scaleY: 0.5,
                         selectable: true,
- responsive-canvas
                         hasControls: true,
-                        hasControls: !isMobile,
-                      main
                         evented: true,
                         lockScalingFlip: true
                     });
@@ -871,4 +826,5 @@
         updateButtonStates();
     </script>
 </body>
+</html>
 </html>
